--- a/index.html
+++ b/index.html
@@ -5,8 +5,13 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>web3-dapp</title>
+    <style>
+      .bg-purple-gradient {
+        background: linear-gradient(135deg, #1e085a, #000000);
+      }
+    </style>
   </head>
-  <body>
+  <body class="bg-purple-gradient text-white min-h-screen p-4 font-sans">
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
