--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/Dapp.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>web3-dapp</title>
     <style>
@@ -11,7 +11,7 @@
       }
     </style>
   </head>
-  <body class="bg-purple-gradient text-white min-h-screen p-4 font-sans">
+  <body class="bg-purple-gradient text-white min-h-screen font-sans">
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
